--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /target
 **/*.rs.bk
-Cargo.lock
+
+/node_modules/
 
 # Ignore all the chapter submodules directories, that git doesn't clean up when
 # switching between branches.
