--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.1.0"
+# wasm-bindgen = { git = "https://github.com/alexcrichton/wasm-bindgen.git" }
+wasm-bindgen = { path = "../wasm-bindgen" }
 
 [profile.release]
 # Include function names in the `.wasm` for better debugging and
