--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "serve": "webpack-dev-server",
-    "build": "cargo build --release --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/wasm_game_of_life.wasm --out-dir ."
+    "build": "rustup run nightly cargo build --release --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/wasm_game_of_life.wasm --out-dir ."
   },
   "devDependencies": {
     "webpack": "^4.0.1",
