--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = chapter-one-with-bug
 	url = https://github.com/fitzgen/wasm_game_of_life.git
 	branch = chapter-one-with-bug
+[submodule "chapter-two"]
+	path = chapter-two
+	url = https://github.com/fitzgen/wasm_game_of_life.git
+	branch = chapter-two
