--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 # Ignore all the chapter submodules directories, that git doesn't clean up when
 # switching between branches.
 chapter-*
+
+wasm_game_of_life.d.ts
+wasm_game_of_life.js
+wasm_game_of_life_bg.wasm
