--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,12 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 # allocator, however.
 wee_alloc = { version = "0.4.1", optional = true }
 
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  "console",
+]
+
 # [profile.release]
 # opt-level = 'z'
 # lto = true
