--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 # allocator, however.
 wee_alloc = { version = "0.4.1", optional = true }
 
+[dev-dependencies]
+wasm-bindgen-test = "0.2"
+
 [dependencies.web-sys]
 version = "0.3"
 features = [
