--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
 crate-type = ["cdylib"]
 
 [features]
-default-features = ["console_error_panic_hook", "wee_alloc"]
+default-features = ["console_error_panic_hook"]
 
 [dependencies]
 cfg-if = "0.1.2"
