--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,9 @@ INSTALL_NODE_VIA_NVM: &INSTALL_NODE_VIA_NVM
 
 install:
   - *INSTALL_NODE_VIA_NVM
-  - (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
-  - (test -x $HOME/.cargo/bin/wasm-pack || cargo install --vers "^0.4" wasm-pack)
-  - (test -x $HOME/.cargo/bin/wasm-bindgen || cargo install --vers "^0.2" wasm-bindgen-cli)
-  - cargo install-update -a
+  - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh -s -- -f
 
 script:
-  - wasm-pack init -m no-install
+  - wasm-pack build
   - cd ./pkg && npm link && cd -
   - cd ./www && npm install && npm link wasm-game-of-life && ./node_modules/.bin/webpack
