Use `default`, not `default-features`, for default features in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default-features = ["console_error_panic_hook"]
+default = ["console_error_panic_hook"]
 
 [dependencies]
 cfg-if = "0.1.2"
