--- a/www/package.json
+++ b/www/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
+    "wasm-game-of-life": "file:../pkg",
     "copy-webpack-plugin": "^5.0.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
