--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "wasm-game-of-life"
 version = "0.1.0"
 authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
+edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -10,8 +11,8 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-cfg-if = "0.1.2"
 wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["console"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -21,12 +22,6 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
-
-[dependencies.web-sys]
-version = "0.3"
-features = [
-  "console",
-]
 
 # [profile.release]
 # opt-level = 'z'
