--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,8 @@ sudo: false
 cache:
   - cargo
 
-INSTALL_NODE_VIA_NVM: &INSTALL_NODE_VIA_NVM
-  |
-    rustup target add wasm32-unknown-unknown
-    curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh | bash
-    source ~/.nvm/nvm.sh
-    nvm install v10.5
-
-install:
-  - *INSTALL_NODE_VIA_NVM
-  - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh -s -- -f
-
 script:
-  - wasm-pack build
-  - cd ./www && npm install && ./node_modules/.bin/webpack
+  - rustup target add wasm32-unknown-unknown
+  - cargo build --target wasm32-unknown-unknown
+  - cargo install wasm-bindgen
+  - wasm-bindgen --out-dir www --target web --reference-types --no-typescript --omit-default-module-path target/wasm32-unknown-unknown/debug/wasm_game_of_life.wasm
